cleanup inspections: must be run under the progress, use invokeConcurrentlyUnderContextProgress to ensure this (part of IJPL255871)
GitOrigin-RevId: dfcbdb4dcfebc2a01c385f381dd9c24bfbda4af3